# lagertha

./: .gitignore  Cargo.toml  README.md  opencode.json  prepare_fixtures.py
class_file/: Cargo.toml  fixtures.toml
class_file/snapshots/: custom-abstracts-basic_abstract-BasicAbstractMain$Animal.class.snap  custom-arrays-primitive_array-PrimitiveArrayMain.class.snap  custom-arrays-reference_array-ReferenceArrayMain$ReferenceClass.class.snap  custom-arrays-reference_array-ReferenceArrayMain.class.snap  custom-arrays-system_array_copy_primitives-SystemArrayCopyPrimitives.class.snap  custom-arrays-system_array_copy_primitives-SystemArrayCopyPrimitivesMain.class.snap  custom-classes-class_is_primitive-ClassIsPrimitiveMain.class.snap  custom-classes-default_fields_values-InstanceDefaultValuesMain.class.snap  custom-classes-get_primitive_array_class_name-GetPrimitiveArrayClassNameMain.class.snap  custom-exception-runtime_exception-ThrowRuntimeException.class.snap  custom-exception-runtime_exception-ThrowRuntimeExceptionMain.class.snap  custom-exception-runtime_exception_get_stack_trace-ThrowRuntimeExceptionGetStackTrace.class.snap  custom-inheritance-call_parent_method-CallParentMethodMain$Child.class.snap  custom-inheritance-call_parent_method-CallParentMethodMain$Parent.class.snap  custom-inheritance-call_parent_method-CallParentMethodMain.class.snap  custom-inheritance-invoke_parent_method-InvokeParentMethodMain$Parent.class.snap  custom-inheritance-invoke_parent_method-InvokeParentMethodMain.class.snap  custom-interfaces-basic_interface-BasicInterfaceMain$Summable.class.snap  custom-interfaces-basic_interface-BasicInterfaceMain.class.snap  java-io-FilterOutputStream.class.snap  java-io-OutputStream.class.snap  java-io-PrintStream.class.snap  java-lang-Object.class.snap  java-lang-String.class.snap  java-lang-System$1.class.snap  java-lang-System.class.snap  jdk-internal-access-SharedSecrets.class.snap  jdk-internal-util-SystemProps.class.snap  jdk-java-io-BufferedInputStream.class.snap  jdk-java-io-BufferedOutputStream.class.snap  jdk-java-io-BufferedWriter.class.snap  jdk-java-io-FileDescriptor$1.class.snap  jdk-java-io-FileDescriptor.class.snap  jdk-java-io-FileInputStream.class.snap  jdk-java-io-FileOutputStream.class.snap  jdk-java-io-FilterInputStream.class.snap  jdk-java-io-FilterOutputStream.class.snap  jdk-java-io-InputStream.class.snap  jdk-java-io-ObjectStreamField.class.snap  jdk-java-io-OutputStreamWriter.class.snap  (+155 more)
class_file/src/: access.rs  constant_pool.rs  error.rs  field.rs  flags.rs  lib.rs  method.rs  print.rs
lvm-class/: Cargo.toml
lvm-class/src/: lib.rs  prelude.rs
runtime/: AGENTS.md  Cargo.toml  README.md
runtime/openspec/: project.md
runtime/snapshots/: custom-abstracts-basic_abstract-BasicAbstractMain.class.snap  custom-arrays-primitive_array-PrimitiveArrayMain.class.snap  custom-arrays-reference_array-ReferenceArrayMain.class.snap  custom-classes-basic_dynamic_dispatch-BasicDynamicDispatchMain.class.snap  custom-classes-class_is_not_primitive-ClassIsNotPrimitiveMain.class.snap  custom-classes-class_is_primitive-ClassIsPrimitiveMain.class.snap  custom-classes-default_fields_values-InstanceDefaultValuesMain.class.snap  custom-classes-get_class_name-GetClassNameMain.class.snap  custom-classes-get_primitive_array_class_name-GetPrimitiveArrayClassNameMain.class.snap  custom-collections-concurrent_hash_map_without_concurrency_check-ConcurrentHashMapWithoutConcurrencyCheckMain.class.snap  custom-inheritance-constructor_chain-ConstructorChainMain.class.snap  custom-inheritance-invoke_parent_method-InvokeParentMethodMain.class.snap  custom-inheritance-invoke_parent_setter-InvokeParentSetterMain.class.snap  custom-interfaces-basic_interface-BasicInterfaceMain.class.snap  custom-string-basic_literal-BasicStringLiteralMain.class.snap  custom-string-combined_literal_and_new-CombinedStringLiteralAndNewMain.class.snap  runtime-abstracts-basic_abstract-BasicAbstractMain.class.snap  runtime-arrays-clone_char_array-CloneCharArrayMain.class.snap  runtime-arrays-primitive_array-PrimitiveArrayMain.class.snap  runtime-arrays-reference_array-ReferenceArrayMain.class.snap  runtime-classes-basic_dynamic_dispatch-BasicDynamicDispatchMain.class.snap  runtime-classes-class_is_not_primitive-ClassIsNotPrimitiveMain.class.snap  runtime-classes-class_is_primitive-ClassIsPrimitiveMain.class.snap  runtime-classes-default_fields_values-InstanceDefaultValuesMain.class.snap  runtime-classes-get_class_name-GetClassNameMain.class.snap  runtime-classes-get_primitive_array_class_name-GetPrimitiveArrayClassNameMain.class.snap  runtime-collections-concurrent_hash_map_without_concurrency_check-ConcurrentHashMapWithoutConcurrencyCheckMain.class.snap  runtime-inheritance-constructor_chain-ConstructorChainMain.class.snap  runtime-inheritance-invoke_parent_method-InvokeParentMethodMain.class.snap  runtime-inheritance-invoke_parent_setter-InvokeParentSetterMain.class.snap  runtime-interfaces-basic_interface-BasicInterfaceMain.class.snap  runtime-string-basic_literal-BasicStringLiteralMain.class.snap  runtime-string-combined_literal_and_new-CombinedStringLiteralAndNewMain.class.snap
runtime/src/: bootstrap_registry.rs  debug_log.rs  error.rs  executor.rs  heap.rs  interpreter.rs  interpreter_deprecated.rs  keys.rs  lib.rs  log_traces.rs  method_area.rs  native_registry.rs  stack.rs  (+3 more)
vm/: AGENTS.md  Cargo.toml  README.md  build.rs
(+652 files in other folders)
