[workspace]
resolver = "2"

members = ["class_file", "common", "vm", "classp", "runtime"]

[workspace.dependencies]
thiserror = "2.0.16"
tracing = { version = "0.1", features = ["attributes", "log", "release_max_level_off"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
