[workspace]
resolver = "2"

members = ["class_file", "common", "vm", "classp", "runtime"]

[workspace.dependencies]
thiserror = "2.0.16"
tracing = { version = "0.1", features = ["attributes", "log", "max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
