[workspace]
resolver = "2"

members = ["jclass", "common", "vm", "javap", "runtime", "jimage"]

[workspace.dependencies]
tracing = { version = "0.1", features = ["attributes", "log", "max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
