[package]
name = "class_file"
version = "0.1.0"
edition = "2024"

[features]
default = []
pretty_print = []

[dependencies]
num_enum = "0.7.4"
itertools = "0.14.0"

thiserror = { workspace = true }

common = { path = "../common" }

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }
rstest = "0.26.1"
serde = { version = "1.0.219", features = ["derive"] }


