[package]
name = "lvm-class"
version = "0.1.0"
edition = "2024"
description = "JVM class file parser and writer for the Lagertha VM project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lagertha-rs/lagertha"
homepage = "https://github.com/lagertha-rs"
authors = ["Obito-git"]
keywords = ["jvm", "java", "bytecode", "class-file", "parser"]
categories = ["parser-implementations", "development-tools"]

[features]
default = []
rns_assemble = []

[dependencies]
num_enum = "0.7.4"

common = { workspace = true }

[dev-dependencies]
