[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[features]
default = []
log-runtime-traces = []

[dependencies]
once_cell = "1.19"
libc = "0.2.177"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
walkdir = "2"

tracing-log = { workspace = true }

jclass = { path = "../jclass" }
jimage = { path = "../jimage" }
common = { path = "../common" }

# TODO to be deleted
toml = "0.8"
