[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[features]
default = []
log-runtime-traces = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[dependencies]
once_cell = "1.19"
libc = "0.2.177"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
walkdir = "2"
crossbeam = "0.8"
byteorder = "1.5"
dashmap = "6.1.0"
smallvec = "1.15.1"

hotpath = { workspace = true }
tracing-log = { workspace = true }

jclass = { path = "../jclass" }
jimage = { path = "../jimage" }
common = { path = "../common" }

# TODO to be deleted
toml = "0.8"
toml_edit = "0.22"
