[package]
name = "vm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tracing-log = { workspace = true }
common = { path = "../common" }
runtime = { path = "../runtime", features = ["debug-log"] }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1.42.2", features = ["yaml"] }
rstest = "0.26.1"

[build-dependencies]
walkdir = "2.5.0"